refactor some endpoints, add implementation for ChangeResponse method in ExceptionHandlerMiddleware.cs
